--- a/package.json
+++ b/package.json
@@ -2,14 +2,21 @@
   "name": "rifu6674-tracker",
   "version": "1.0.0",
   "description": "Web application for tracking.. something (havent decided)",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "prestart": "parcel build ./public/index.html",
+    "dev": "parcel serve ./public/index.html",
     "start": "node server.js"
   },
   "author": "Riu Fukazawa",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.1",
+    "sass": "^1.62.0"
+  },
+  "devDependencies": {
+    "@parcel/transformer-sass": "^2.8.3",
+    "parcel": "^2.8.3"
   }
 }
